--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,10 @@
-:root {
-  --safe-zone: clamp(5vw, calc(50vw - 30rem), 999rem);
-}
-
 *,
+*::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
-body::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  z-index: -1;
-  pointer-events: none;
-
-  background-image:
-    linear-gradient(to right,
-      rgba(248, 247, 242, 0.06) 0 2px,
-      transparent 2px),
-    linear-gradient(to bottom,
-      rgba(248, 247, 242, 0.06) 0 2px,
-      transparent 2px);
-  background-size: 24px 24px;
-}
-
-
 
 html,
 body {
@@ -60,7 +38,20 @@ body {
 body {
   font: 400 1rem/1.6 var(--font-sans);
   color: var(--color-text);
-  background: var(--color-bg);
+  background-color: var(--color-bg);
+  background-image:
+    linear-gradient(
+      to right,
+      rgba(248, 247, 242, 0.06) 0 2px,
+      transparent 2px
+    ),
+    linear-gradient(
+      to bottom,
+      rgba(248, 247, 242, 0.06) 0 2px,
+      transparent 2px
+    );
+  background-size: 24px 24px;
+  background-attachment: fixed;
 }
 
 img,
